--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-
+  provider: 
+  google_fonts:
+  flutter_svg:
+  flutter_spinkit:
+  flutter_native_splash:
+  flutter_launcher_icons: ^0.13.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -59,12 +64,36 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/svgs/
+    - assets/pngs/
+    - assets/imgs/
 
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/pngs/logo.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  remove_alpha_ios: true
+
+flutter_native_splash:
+  color: "#01629f"
+  #background_image: "assets/background.png"
+  image: assets/pngs/nobg.png
+  #color_dark: "#042a49"
+  android_12:
+    # Splash screen background color.
+    color: "#01629f"
+    # App icon background color.
+    #icon_background_color: "#111111"
+    # The branding property allows you to specify an image used as branding in the splash screen.
+    #branding: assets/dart.png
+
+  #web: false
+  android_gravity: center
+  ios_content_mode: center
+  fullscreen: true
 
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
