--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<!-- app permissions -->
+ <uses-permission android:name="android.permission.INTERNET"/>
+ 
     <application
-        android:label="quic_credit"
+        android:label="QuicCredit"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
