--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,21 @@
+buildscript {
+    ext.kotlin_version = '1.9.23'
+    repositories {
+        google()
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.3.0'
+        // END: FlutterFire Configuration
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
+
+plugins {
+    id 'com.google.gms.google-services' version '4.3.15' apply false
+}
+
 allprojects {
     repositories {
         google()
