--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   flutter_native_splash:
   flutter_launcher_icons: ^0.13.1
   smooth_page_indicator: ^1.1.0
+  pinput: ^4.0.0
+  intl: ^0.19.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
