--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.9.23'
+    ext.kotlin_version = '1.8.0'
     repositories {
         google()
         mavenCentral()
@@ -14,6 +14,7 @@ buildscript {
 
 plugins {
     id 'com.google.gms.google-services' version '4.3.15' apply false
+    // id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
 }
 
 allprojects {
