--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   pinput: ^4.0.0
   intl: ^0.19.0
+  auto_size_text: ^3.0.0
+  google_nav_bar: ^5.0.6
+  shared_preferences: ^2.2.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -76,18 +79,18 @@ flutter:
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/pngs/logo.png"
+  image_path: "assets/pngs/new_logo.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
   remove_alpha_ios: true
 
 flutter_native_splash:
-  color: "#01629f"
+  color: "#ffffff"
   #background_image: "assets/background.png"
   image: assets/pngs/nobg.png
   #color_dark: "#042a49"
   android_12:
     # Splash screen background color.
-    color: "#01629f"
+    color: "#ffffff"
     # App icon background color.
     #icon_background_color: "#111111"
     # The branding property allows you to specify an image used as branding in the splash screen.
