--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-<!-- app permissions -->
- <uses-permission android:name="android.permission.INTERNET"/>
- 
+    <!-- app permissions -->
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <!-- messages permission -->
+    <uses-feature
+            android:name="android.hardware.telephony"
+            android:required="false" />
+        <uses-permission android:name="android.permission.READ_SMS" />
+        <!--  -->
     <application
         android:label="QuicCredit"
         android:name="${applicationName}"
