--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   auto_size_text: ^3.0.0
   google_nav_bar: ^5.0.6
   shared_preferences: ^2.2.3
+  animations: ^2.0.11
+  confetti: ^0.7.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
