--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   shared_preferences: ^2.2.3
   animations: ^2.0.11
   confetti: ^0.7.0
+  http: ^1.2.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
